--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -64,126 +64,127 @@
                 </form>
          </div>
         </nav>
-        <footer>
-            <div class="totalfim">
-                <div class="fimsite">
-                    <div class="namesite">
-                    <a href="/index/index.html">
-                            <img src="/img/logo-removebg-preview.png" alt="">
+        <nav>
+            <footer>
+                <div class="totalfim">
+                    <div class="fimsite">
+                        <div class="namesite">
+                        <a href="/index/index.html">
+                                <img src="/img/logo-removebg-preview.png" alt="">
+                            </a>
+                            <h2>
+                                CheckCut
+                            </h2>
+                        </div>
+                        <div class="buttonfim">
+                            <button type="button" onclick="gologin()" disabled="true">login</button>
+                        </div>
+                        <div class="buttonfim">
+                            <button type="button" onclick="goregister()" disabled="true">cadastrece</button>
+                        </div>
+                    </div>
+                        <div class="topctotal">
+                            <div class="topc">
+                                <div class="">
+                                    <h3>
+                                        Topicos
+                                    </h3>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1"href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                            </div>
+                            <div class="topc">
+                                <div class="">
+                                    <h3>
+                                        Topicos
+                                    </h3>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                            </div>
+                            <div class="topc">
+                                <div class="">
+                                    <h3>
+                                        Topicos
+                                    </h3>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                                <div class="top1">
+                                    <a class="atopc1" href="www.google.com.br">Google</a>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+                <div class="redes">
+                    <div class="youtube">
+                        <a href="https://www.youtube.com/" target="_blank">
+                            <img src="/img/youtube.png" alt="youtube">
                         </a>
-                        <h2>
-                            CheckCut
-                        </h2>
                     </div>
-                    <div class="buttonfim">
-                        <button type="button" onclick="gologin()" disabled="true">login</button>
+                    <div class="whats">
+                        <a href="https://web.whatsapp.com/" target="_blank">
+                            <img src="/img/whatsapp.png" alt="wahtsapp">
+                        </a>
                     </div>
-                    <div class="buttonfim">
-                        <button type="button" onclick="goregister()" disabled="true">cadastrece</button>
+                    <div class="instagem">
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <img src="/img/instagram.png" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="facebook">
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <img src="/img/logotipo-circular-do-facebook.png" alt="facebook">
+                        </a>
                     </div>
                 </div>
-                    <div class="topctotal">
-                        <div class="topc">
-                            <div class="">
-                                <h3>
-                                    Topicos
-                                </h3>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1"href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                        </div>
-                        <div class="topc">
-                            <div class="">
-                                <h3>
-                                    Topicos
-                                </h3>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                        </div>
-                        <div class="topc">
-                            <div class="">
-                                <h3>
-                                    Topicos
-                                </h3>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                            <div class="top1">
-                                <a class="atopc1" href="www.google.com.br">Google</a>
-                            </div>
-                        </div>
-                    </div>
-            </div>
-            <div class="redes">
-                <div class="youtube">
-                    <a href="https://www.youtube.com/" target="_blank">
-                        <img src="/img/youtube.png" alt="youtube">
-                    </a>
-                </div>
-                <div class="whats">
-                    <a href="https://web.whatsapp.com/" target="_blank">
-                        <img src="/img/whatsapp.png" alt="wahtsapp">
-                    </a>
-                </div>
-                <div class="instagem">
-                    <a href="https://www.instagram.com/" target="_blank">
-                        <img src="/img/instagram.png" alt="instagram">
-                    </a>
-                </div>
-                <div class="facebook">
-                    <a href="https://www.facebook.com/" target="_blank">
-                        <img src="/img/logotipo-circular-do-facebook.png" alt="facebook">
-                    </a>
-                </div>
-            </div>
-        </footer>
-    </nav>
+            </footer>
+        </nav>
 </body>
 
 
