--- a/projet/home/home.html
+++ b/projet/home/home.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agendamento</title>
     <link rel="stylesheet" href="home.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+    <header >
         <div class="topo">
             <div id="imglogo" >
                 <a href="/html/index.html">
@@ -15,10 +16,10 @@
             </div>
             <div class="infor">
                 <div class="login">
-                    <p><button onclick="gologin()">Login</button></p>
+                    <p><button onclick="gologin()">Perfil</button></p>
                 </div>
                 <div class="cadastrece">
-                    <p><button>cadastrece</button></p>
+                    <p><button>Marcar</button></p>
                 </div>
                 <div class="contato">
                     <p><button type="button" onclick="logout()">Sair</button></p>
@@ -26,6 +27,192 @@
             </div>
         </div>
     </header>
+    <nav class="hight-aside">
+        <aside class="left">
+            <div class="colant">
+                <form action="colabora">
+                    <h2>Colaboradores</h2>
+                <dl class="lt-esquerda">
+                    <dt>
+                        <a href="">
+                            <img class="img-colab" src="/img/colabe1.jpg" alt=""></dt>
+                            <dd>colaborador2</dd>
+                        </a>
+                    <dt>
+                        <a href="">
+                            <img class="img-colab"src="/img/colabe2.jpg" alt=""></dt>
+                            <dd>colaborador2</dd>
+                        </a>
+                    <dt>
+                        <a href="">
+                            <img class="img-colab" src="/img/colab3.webp" alt=""></dt>
+                            <dd>colaborador2</dd>
+                        </a>
+                </lu>
+                </form>
+            </div>
+        </aside>
+    </nav>
+    <main class="center">
+        <nav class="bloco">
+            <div class="titlenav">
+                <p>
+                    <h2>
+                        Agende imediatamente
+                    </h2>
+                </p>
+            </div>
+            <div class="descrition">
+                <p>
+                    Este site é uma plataforma para agendamento de horários na barbearia, onde os clientes podem reservar serviços facilmente online. Oferece uma interface intuitiva e informações detalhadas sobre os serviços disponíveis.
+                </p>
+            </div>
+            <div class="buttonsab">
+                <button class="saiba">Saiba mais</button>
+            </div>
+        </nav>
+        <nav class="imgtop">
+            <img class="imginicio" src="/img/imgcara.jpeg">
+        </nav>
+        <nav class="twotitle">
+            <h1 class="titlet2">
+                Cortes 
+            </h1>
+            <div class="imgCortes">
+                <div class="c1">
+                    <img class="ft1" src="/img/corte (1).jpeg" alt="cort1">
+                </div>
+                <div class="c2">
+                    <img class="ft2" src="/img/corte (2).jpeg" alt="cort2">
+                </div>
+                <div class="c3">
+                    <img class="ft3" src="/img/corte (3).jpeg" alt="cort3">
+                </div>
+            </div>
+            <div class="descriço">
+                <div class="desc1">
+                    <p><h2>Degrade</h2></p>
+                    <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
+                </div>
+                <div class="desc2">
+                    <p><h2>Degrade</h2></p>
+                    <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
+                </div>
+                <div class="desc3">
+                    <p><h2>Degrade</h2></p>
+                    <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.  </p>
+                </div>
+            </div>
+        </nav>
+        <section>
+            <div class="total">
+                <div class="totaltex">
+                    <div class="titulo">
+                        <h1>Quimicos</h1>
+                    </div>
+                    <div class="descrition">
+                        <div class="drescrip1">
+                            <h3>Progreciva</h3>
+                            <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
+                        </div>
+                        <div class="drescrip2">
+                            <h3>Progreciva</h3>
+                            <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
+                        </div>
+                        <div class="drescrip3">
+                            <h3>Progreciva</h3>
+                            <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que apresenta uma transição suave do cabelo curto para o longo.</p>
+                        </div>
+                    </div>
+                    <div class="Buttons">
+                        <button>
+                            Buton
+                        </button>
+                        <button>
+                            Buton
+                        </button>
+                    </div>
+                </div>
+                <div class="imglado">
+                    <img class="imglr" src="/img/luzes (1).jpeg" alt="luzes">
+                </div>
+            </div>
+        </section>
+        <nav class="problematica">
+            <div class="tituloProcedimentos">
+                <h1>
+                    Procedimentos
+                </h1>
+            </div>
+            <div class="sobracelha">
+                <div class="divimg1" >
+                    <img  class="imgsobra1" src="/img/sobracelha1.jpg" alt="sobracelho1">
+                </div>
+                <div  class="divimg">
+                    <img class="imgsobra2" src="/img/sobracelha2.jpg" alt="sobracelho2">
+                </div>
+            </div>
+            <div class="divtext">
+                <div class="divtext1">
+                    <h3>Limpesa de Rosto</h3>
+                    <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que </br> apresenta uma transição suave do cabelo curto para o longo.</p>
+                </div>
+                <div class="divtext2">
+                    <h3>Sobrancelha</h3>
+                    <p>O corte de cabelo degradê, também conhecido como fade, é um estilo popular que </br> apresenta uma transição suave do cabelo curto para o longo.</p>
+                </div>
+            </div>
+        </nav>
+        <footer class="footermain">
+            <div class="totalfim">
+                <div class="fimsite">
+                    <div class="namesite">
+                    <a href="/index/index.html">
+                            <img src="/img/logo-removebg-preview.png" alt="">
+                        </a>
+                        <h2>
+                            CheckCut
+                        </h2>
+                    </div>
+                    <div class="redes">
+                        <div class="youtube">
+                            <a href="https://www.youtube.com/" target="_blank">
+                                <img src="/img/youtube.png" alt="youtube">
+                            </a>
+                        </div>
+                        <div class="whats">
+                            <a href="https://web.whatsapp.com/" target="_blank">
+                                <img src="/img/whatsapp.png" alt="wahtsapp">
+                            </a>
+                        </div>
+                        <div class="instagem">
+                            <a href="https://www.instagram.com/" target="_blank">
+                                <img src="/img/instagram.png" alt="instagram">
+                            </a>
+                        </div>
+                        <div class="facebook">
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <img src="/img/logotipo-circular-do-facebook.png" alt="facebook">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </main>
+    <aside class="aside-right">
+        <h2>
+            Procedimentos Recentes
+        </h2>
+        <ul class="lista" >
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </aside>
+    
 </body>
 
 
