--- a/projet/home/home.html
+++ b/projet/home/home.html
@@ -68,11 +68,11 @@
                 </p>
             </div>
             <div class="buttonsab">
-                <button class="saiba">Saiba mais</button>
+                <button class="saiba">Agende aqui!</button>
             </div>
         </nav>
         <nav class="imgtop">
-            <img class="imginicio" src="/img/imgcara.jpeg">
+            <img class="imginicio" src="/img/tophome.jpg">
         </nav>
         <nav class="twotitle">
             <h1 class="titlet2">
@@ -80,13 +80,13 @@
             </h1>
             <div class="imgCortes">
                 <div class="c1">
-                    <img class="ft1" src="/img/corte (1).jpeg" alt="cort1">
+                    <img class="ft1" src="/img/midhome1.jpg" alt="cort1">
                 </div>
                 <div class="c2">
-                    <img class="ft2" src="/img/corte (2).jpeg" alt="cort2">
+                    <img class="ft2" src="/img/midhome2.jpg" alt="cort2">
                 </div>
                 <div class="c3">
-                    <img class="ft3" src="/img/corte (3).jpeg" alt="cort3">
+                    <img class="ft3" src="/img/midhome3.jpg" alt="cort3">
                 </div>
             </div>
             <div class="descriço">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="imglado">
-                    <img class="imglr" src="/img/luzes (1).jpeg" alt="luzes">
+                    <img class="imglr" src="/img/bottonhome.jpg" alt="luzes">
                 </div>
             </div>
         </section>
@@ -146,10 +146,10 @@
             </div>
             <div class="sobracelha">
                 <div class="divimg1" >
-                    <img  class="imgsobra1" src="/img/sobracelha1.jpg" alt="sobracelho1">
+                    <img  class="imgsobra1" src="/img/bottonlongs.jpg" alt="sobracelho1">
                 </div>
                 <div  class="divimg">
-                    <img class="imgsobra2" src="/img/sobracelha2.jpg" alt="sobracelho2">
+                    <img class="imgsobra2" src="/img/bottonlongs1.jpg" alt="sobracelho2">
                 </div>
             </div>
             <div class="divtext">
