--- a/projet/newindex/newindex.html
+++ b/projet/newindex/newindex.html
@@ -21,7 +21,7 @@
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="#agendamento" class="cta">Agende Seu Horário</a></li>
+                    <li><button type="button" onclick="gologin()">Agende Seu Horário</button></li>
                 </ul>
             </nav>
         </div>
@@ -32,7 +32,7 @@
             <div class="hero-content">
                 <h1>Estilo e Cuidado para o Homem Moderno</h1>
                 <p>Barbeiros experientes, produtos premium e um ambiente acolhedor esperam por você.</p>
-                <a href="#agendamento" class="cta-primary">Agende Seu Horário Online</a>
+                <a href="/login/login.html" class="cta-primary">Agende Seu Horário Online</a>
                 <div class="vantagens">
                     <div class="vantagem">
                         <img src="/img/icon-barber.jpeg" alt="Barbeiros Experientes">
@@ -141,8 +141,11 @@
             <div class="social-links">
                 <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
-                </div>
+                <a href="#"><img src="/img/youtube.png" alt="Facebook"></a>
+                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+            </div>
         </div>
     </footer>
 </body>
+<script src="/js/go.js"></script>
 </html>
