--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -12,11 +12,11 @@
         <div class="topo">
             <div id="imglogo" >
                 <a href="/index/index.html">
-                    <img class="ing" src="/img/logo-removebg-preview.png" alt="logo"></a>
+                    <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
                 <div class="login">
-                    <p><button onclick="goIndex()">pagina inicial</button></p>
+                    <p><button onclick="gonewIndex()">pagina inicial</button></p>
                 </div>
                 <div class="cadastrece">
                     <p><button onclick="">informações</button></p>
@@ -27,6 +27,7 @@
             </div>
         </div>
     </header>
+    <div class=".body">
         <nav class="imputs">
             <div class="back">
                 <form action="log">
@@ -64,127 +65,20 @@
                 </form>
          </div>
         </nav>
-        <nav>
-            <footer>
-                <div class="totalfim">
-                    <div class="fimsite">
-                        <div class="namesite">
-                        <a href="/index/index.html">
-                                <img src="/img/logo-removebg-preview.png" alt="">
-                            </a>
-                            <h2>
-                                CheckCut
-                            </h2>
-                        </div>
-                        <div class="buttonfim">
-                            <button type="button" onclick="gologin()" disabled="true">login</button>
-                        </div>
-                        <div class="buttonfim">
-                            <button type="button" onclick="goregister()" disabled="true">cadastrece</button>
-                        </div>
-                    </div>
-                        <div class="topctotal">
-                            <div class="topc">
-                                <div class="">
-                                    <h3>
-                                        Topicos
-                                    </h3>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1"href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                            </div>
-                            <div class="topc">
-                                <div class="">
-                                    <h3>
-                                        Topicos
-                                    </h3>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                            </div>
-                            <div class="topc">
-                                <div class="">
-                                    <h3>
-                                        Topicos
-                                    </h3>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                                <div class="top1">
-                                    <a class="atopc1" href="www.google.com.br">Google</a>
-                                </div>
-                            </div>
-                        </div>
-                </div>
-                <div class="redes">
-                    <div class="youtube">
-                        <a href="https://www.youtube.com/" target="_blank">
-                            <img src="/img/youtube.png" alt="youtube">
-                        </a>
-                    </div>
-                    <div class="whats">
-                        <a href="https://web.whatsapp.com/" target="_blank">
-                            <img src="/img/whatsapp.png" alt="wahtsapp">
-                        </a>
-                    </div>
-                    <div class="instagem">
-                        <a href="https://www.instagram.com/" target="_blank">
-                            <img src="/img/instagram.png" alt="instagram">
-                        </a>
-                    </div>
-                    <div class="facebook">
-                        <a href="https://www.facebook.com/" target="_blank">
-                            <img src="/img/logotipo-circular-do-facebook.png" alt="facebook">
-                        </a>
-                    </div>
-                </div>
-            </footer>
-        </nav>
+    </div>
+    <footer>
+        <div class="container">
+            <p>&copy; [Ano Atual] [Nome da Barbearia]. Todos os direitos reservados.</p>
+            <div class="social-links">
+                <a href="#"><img src="/img/logotipo-circular-do-facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/youtube.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+                <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 
