inicio do agendamento

--- a/projet/login/login.html
+++ b/projet/login/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/login/login.css">
-    
+    <link rel="stylesheet" href="/global/glob.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,13 +15,13 @@
                     <img class="ing" src="/img/logo-site.jpeg" alt="logo"></a>
             </div>
             <div class="infor">
-                <div class="login">
-                    <p><button onclick="gonewIndex()">pagina inicial</button></p>
+                <div class="semback">
+                    <p><button onclick="gonewIndex()">Pagina inicial</button></p>
                 </div>
-                <div class="cadastrece">
+                <div class="semback">
                     <p><button onclick="">informações</button></p>
                 </div>
-                <div class="contato">
+                <div class="comback">
                     <p><button>Contatos</button></p>
                 </div>
             </div>
@@ -75,16 +75,10 @@
                 <a href="#"><img src="/img/youtube.png" alt="Instagram"></a>
                 <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
                 <a href="#"><img src="/img/whatsapp.png" alt="Instagram"></a>
-
             </div>
         </div>
     </footer>
 </body>
-
-
-
-
-
   <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth-compat.js"></script>
   <script src="../js/firebase-init.js"></script>
