--- a/projet/newindex/newindex.html
+++ b/projet/newindex/newindex.html
@@ -26,7 +26,6 @@
             </nav>
         </div>
     </header>
-
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
@@ -49,7 +48,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="" alt="">
+                <img src="/img/barbearia-hero.jpeg" alt="">
             </div>
         </div>
     </section>
@@ -117,11 +116,11 @@
             <h2>Contato</h2>
             <div class="contato-info">
                 <div class="info-item">
-                    <img src="/img/icon-local.jpeg" alt="Localização">
+                    <img src="/img/icon-local.png" alt="Localização">
                     <p>[Seu Endereço Completo]</p>
                 </div>
                 <div class="info-item">
-                    <img src="/img/icon-phone.jpeg" alt="Telefone">
+                    <img src="/img/icon-phone.png" alt="Telefone">
                     <p>[Seu Telefone]</p>
                 </div>
                 <div class="info-item">
