--- a/projet/home/home.html
+++ b/projet/home/home.html
@@ -129,10 +129,10 @@
                         </div>
                     </div>
                     <div class="Buttons">
-                        <button>
+                        <button class="semback">
                             Buton
                         </button>
-                        <button>
+                        <button class="semback">
                             Buton
                         </button>
                     </div>
